[gd_scene load_steps=2 format=3 uid="uid://bm1wqssj1xhiv"]

[ext_resource type="Script" path="res://UI/MixingScene/mixing_slot.gd" id="1_1nfvx"]

[node name="Mixing Slot" type="HBoxContainer"]
offset_right = 152.0
offset_bottom = 116.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_1nfvx")

[node name="Dose Slider" type="HSlider" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 1.0
value = 1.0
ticks_on_borders = true

[node name="Label" type="Label" parent="Dose Slider"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "0 units
"

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="TextureRect" type="TextureRect" parent="Panel"]
texture_filter = 1
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[connection signal="value_changed" from="Dose Slider" to="." method="_on_dose_slider_value_changed"]
[connection signal="mouse_entered" from="Panel" to="." method="_on_panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_panel_mouse_exited"]
